2007-09-29  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_webparts.py (Webparts.testPages): reload the
	WebStatus, make sure all pages are still retrievable. I thought
	this would exercise a bug, but it turns out that it was firefox
	caching connections (and continuing to talk to the old WebStatus
	even though I'd loaded a new one).
	* buildbot/status/web/baseweb.py (WebStatus): add some comments
	(WebStatus.__repr__): include id() in the repr

	* buildbot/status/tinderbox.py (TinderboxMailNotifier): allow
	this to specify an errorparser. From Ted Mielczarek and the
	mozilla crew. Closes #94.

	* buildbot/changes/bonsaipoller.py (BonsaiParser): "Make
	bonsaipoller ignore funkyness in xml output for empy log
	messages", from Axel Hecht. Closes #90.
	* buildbot/test/test_bonsaipoller.py
	(TestBonsaiPoller.testMergeEmptyLogMsg): same

	* buildbot/status/tinderbox.py (TinderboxMailNotifier.buildStarted):
	respect 'builders' arg, from Ben Hearsum. Closes #89.

	* buildbot/scripts/runner.py (stop): increase the timeout from 5
	seconds to 10, to give heavily loaded machines a better chance to
	finish shutting down. Addresses (partially) #68.
	* buildbot/scripts/logwatcher.py (LogWatcher.TIMEOUT_DELAY): same,
	on startup
	* buildbot/scripts/reconfig.py (Reconfigurator.run): same
	* buildbot/scripts/startup.py (Follower._failure): update message

	* buildbot/changes/bonsaipoller.py: apply changes from the Mozilla
	team, to fix some bugs and avoid the use of blocking urlopen().
	closes #61.
	* buildbot/test/test_bonsaipoller.py: same

2007-09-28  Brian Warner  <warner@lothar.com>

	* buildbot/buildslave.py (BuildSlave): add notify_on_missing=
	argument, to send email about buildslaves which are disconnected
	for more than an hour. Closes #64.
	* buildbot/test/test_slaves.py (BuildSlave.test_mail_on_missing):
	test it
	* docs/buildbot.texinfo (When Buildslaves Go Missing): document it
	(MailNotifier): add docs for this too

